--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container-fluid" style="height: 100vh">
           <div class="col-md-5" style="height: 100%">
             <div class="left-pane">
-              <div style="height: 40%; background: azure">
+              <div class="liveChartHolder">
                 <canvas id="liveChart"></canvas>
               </div>
             </div>
