--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                 <label for="radRange">Effective Radius</label>
                 <input type="range" class="custom-range" id="radRange" value="10">
 
-                <button id="runbutton" style="margin: 1% 1% 1% 1%" type="button" class="btn btn-primary">Run Simulation</button>
+                <div class="row" style="margin: 1% 1% 1% 1%" >
+                  <button id="runbutton" type="button" class="btn btn-primary">Run Simulation</button>
+                  <button id="stopbutton" type="button" class="btn btn-primary">Stop Simulation</button>
+                </div>
               </div>
             </div>
           </div>
