Add/remove users

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <input type="range" class="custom-range" id="radRange" value="10">
 
                 <div class="row" style="margin: 1% 1% 1% 1%" >
+                  <button id="addcitizen" type="button" class="btn btn-primary">+</button>
+                  <button id="dropcitizen" type="button" class="btn btn-primary">-</button>
+                </div>
+
+                <div class="row" style="margin: 1% 1% 1% 1%" >
                   <button id="runbutton" type="button" class="btn btn-primary">Run Simulation</button>
                   <button id="stopbutton" type="button" class="btn btn-primary">Stop Simulation</button>
                 </div>
